# Pytest-Okken-2022

./: APPLICATION-UNDER-TEST.md  README.md  SEEALSO.md  application-under-test.md  application_under_test.md  pytest.ini  requirements.txt  system-under-test.md  terms.md  tox_github_actions.ini
00--pytest/: buildin-markers.md  command-line-flags.md  configuration-files.md  listing-fixtures.md  listing-markers.md
01/: test_01-1--passing.py  test_01-2--failing.py
01--introduction/: test_01-1--passing.py  test_01-2--failing.py
02/: test_02-1--card.py  test_02-2--card-fail.py  test_02-3--card-alt-fail.py  test_02-4--helper.py  test_02-5--exceptions.py  test_02-7--classes.py
02--basic-tests/: test_02-1--card.py  test_02-2--card-fail.py  test_02-3--card-alt-fail.py  test_02-4--helper.py  test_02-5--exceptions.py  test_02-7--classes.py
02--tests/: test_02-1--card.py  test_02-2--card-fail.py  test_02-3--card-alt-fail.py  test_02-4--helper.py  test_02-5--exceptions.py  test_02-7--classes.py
04--build-in-fixtures/: test_04-1--tmp_path--tmp_path_factory.py  test_04-2--capsys.py  test_04-3--monkeypatch.py
05--parametrization/: test_05-1--motivation.py  test_05-2--function-parametrization.py  test_05-3--fixture-parametrization.py  test_05-4--hook-function-example--pytest_generate_tests.py  test_05-4--pytest_generate_tests.py
06--markers/: pytest.ini  test_06-01--build-in-markers--skip.py  test_06-02--build-in-markers--skipif.py  test_06-03--build-in-markers--xfail.py  (+5 more)
15--building-plugins/installable-plugin/: README.md  pyproject.toml  pytest_skip_slow.py
(+242 files in other folders)
